Introduced singleton list.